modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <img src="field.png" alt="Fields">
     <br>
-    <button id="popupBtn">Click me</button>
+    <button id="popupBtn1">Click me</button>
 
-    <div id="popup" class="popup">
-        <div class="popup-content">
+    <div id="popup1" class="popup1">
+        <div class="popup-content1">
             <p>This is text</p>
             <!-- Input text field -->
-            <input type="text" id="textInput" placeholder="Type something..." style="width: 80%; padding: 5px; margin: 10px 0;">
+            <input type="text" id="textInput1" placeholder="Type something..." style="width: 80%; padding: 5px; margin: 10px 0;">
             <br>
             <!-- Save and Close buttons -->
-            <button class="save-btn" id="saveBtn">Save</button>
-            <button class="close-btn" id="closePopup">Close</button>
+            <button class="save-btn1" id="saveBtn1">Save</button>
+            <button class="close-btn1" id="closepopup1">Close</button>
         </div>
     </div>
     <script src="script.js"></script>
